...
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/request_info_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/restaurant_placeholder_name"
                android:textColor="@color/black"
                android:textSize="20sp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/request_info_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_placeholder_cost"
            android:textAlignment="center"
            android:textColor="@color/orange_700"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/request_info_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_placeholder_status"
            android:textAlignment="center"
            android:textColor="@color/orange_700"
...
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/request_info_no_reserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Your request has not been claimed yet"
        android:textColor="@color/red_700"
        android:textSize="20sp"
...
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/request_info_party_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_number_in_party"
        android:textColor="@color/black"
        android:textSize="18sp"
...
            android:backgroundTint="@color/red_400"
            android:text="@string/cancel"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/request_info_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
...
