...
    <string name="facebook_app_id">411991952549272</string>
    <!--<string name="fb_login_protocol_scheme">fb141415479828767</string>-->
    <string name="fb_login_protocol_scheme">fb411991952549272</string>
    <string name="google_places_api_key">AIzaSyCAUELvw1Eb4bodtlC8iWqc6mwIQdcesnI</string>

    <string name="menu_requester">Requests Sent</string>
    <string name="menu_acceptor">Requests Claimed</string>
    <string name="menu_home">Nearby Requests</string>
    <string name="menu_add">New Request</string>

    <string name="request_info">Request Information</string>
    <string name="restaurant_placeholder_name">Restaurant Name</string>
    <string name="restaurant_placeholder_address">123 Westwood Blvd\nLos Angeles, CA 90024</string>
    <string name="restaurant_placeholder_number">+1 310-555-5678</string>
...
