...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ListView
            android:id="@+id/requestfeed_request_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transcriptMode="normal"
            />

        <TextView
...
